--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
         <div id="survey-form">
           <div id="both">
             <div class="facebook">
-              <a href="https://www.facebook.com/">Facebook</a>
+              <a href="https://www.facebook.com/"
+                ><i id="icon" class="fab fa-facebook"></i>Facebook</a
+              >
             </div>
 
             <div class="google">
-              <a href="https://www.google.com/">Google</a>
+              <a href="https://www.google.com/"
+                ><i id="icon2" class="fab fa-google"></i>Google</a
+              >
             </div>
             <br />
           </div>
